// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button is disabled 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "dangerLight": "#FF544F",
          "disabledGrey": "#ced4d9",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGrey": "#f0f3f5",
          "lines": "#dce3eb",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#ff9d26",
          "secundary": "#00A8Be",
          "secundarySoft": "#D6EEF2",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "softGrey": "#788590",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                  "onProcessSheet": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        isDisabled={true}
        onClick={[Function]}
      >
        <WithStyles(Button)
          innerRef={null}
          isDisabled={true}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                        "onProcessSheet": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [
                      [Function],
                    ],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          onClick={[Function]}
          size="medium"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "dangerLight": "#FF544F",
                "disabledGrey": "#ced4d9",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGrey": "#f0f3f5",
                "lines": "#dce3eb",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#ff9d26",
                "secundary": "#00A8Be",
                "secundarySoft": "#D6EEF2",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "softGrey": "#788590",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          type="filled"
        >
          <Button
            classes={
              Object {
                "big": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-big-0-2-50",
                "danger": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-danger-0-2-48",
                "disabled": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-disabled-0-2-51",
                "fullWidth": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-fullWidth-0-2-52",
                "label": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-label-0-2-41",
                "labelLoading": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-labelLoading-0-2-42",
                "loader": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-loader-0-2-43",
                "outlined": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-outlined-0-2-44",
                "primary": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-primary-0-2-47",
                "root": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-root-0-2-40",
                "small": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-small-0-2-49",
                "squared": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-squared-0-2-45",
                "white": "HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-white-0-2-46",
              }
            }
            isDisabled={true}
            onClick={[Function]}
            size="medium"
            type="filled"
          >
            <button
              className="HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-root-0-2-40 undefined HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-white-0-2-46 HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-disabled-0-2-51"
              onClick={null}
            >
              <span
                className=""
              >
                <span
                  className="HoiPoi-HoiPoi-HoiPoi-HoiPoi-Button-label-0-2-41"
                >
                  Hello
                </span>
              </span>
            </button>
          </Button>
        </WithStyles(Button)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Button is rendered as a link 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "dangerLight": "#FF544F",
          "disabledGrey": "#ced4d9",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGrey": "#f0f3f5",
          "lines": "#dce3eb",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#ff9d26",
          "secundary": "#00A8Be",
          "secundarySoft": "#D6EEF2",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "softGrey": "#788590",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                  "onProcessSheet": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        href="https://hello.com"
      >
        <WithStyles(Button)
          href="https://hello.com"
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                        "onProcessSheet": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [
                      [Function],
                    ],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          size="medium"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "dangerLight": "#FF544F",
                "disabledGrey": "#ced4d9",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGrey": "#f0f3f5",
                "lines": "#dce3eb",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#ff9d26",
                "secundary": "#00A8Be",
                "secundarySoft": "#D6EEF2",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "softGrey": "#788590",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          type="filled"
        >
          <Button
            classes={
              Object {
                "big": "HoiPoi-HoiPoi-HoiPoi-Button-big-0-2-37",
                "danger": "HoiPoi-HoiPoi-HoiPoi-Button-danger-0-2-35",
                "disabled": "HoiPoi-HoiPoi-HoiPoi-Button-disabled-0-2-38",
                "fullWidth": "HoiPoi-HoiPoi-HoiPoi-Button-fullWidth-0-2-39",
                "label": "HoiPoi-HoiPoi-HoiPoi-Button-label-0-2-28",
                "labelLoading": "HoiPoi-HoiPoi-HoiPoi-Button-labelLoading-0-2-29",
                "loader": "HoiPoi-HoiPoi-HoiPoi-Button-loader-0-2-30",
                "outlined": "HoiPoi-HoiPoi-HoiPoi-Button-outlined-0-2-31",
                "primary": "HoiPoi-HoiPoi-HoiPoi-Button-primary-0-2-34",
                "root": "HoiPoi-HoiPoi-HoiPoi-Button-root-0-2-27",
                "small": "HoiPoi-HoiPoi-HoiPoi-Button-small-0-2-36",
                "squared": "HoiPoi-HoiPoi-HoiPoi-Button-squared-0-2-32",
                "white": "HoiPoi-HoiPoi-HoiPoi-Button-white-0-2-33",
              }
            }
            href="https://hello.com"
            size="medium"
            type="filled"
          >
            <a
              className="HoiPoi-HoiPoi-HoiPoi-Button-root-0-2-27 undefined HoiPoi-HoiPoi-HoiPoi-Button-white-0-2-33"
              href="https://hello.com"
            >
              <span
                className=""
              >
                <span
                  className="HoiPoi-HoiPoi-HoiPoi-Button-label-0-2-28"
                >
                  Hello
                </span>
              </span>
            </a>
          </Button>
        </WithStyles(Button)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Button is rendered combining props 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "dangerLight": "#FF544F",
          "disabledGrey": "#ced4d9",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGrey": "#f0f3f5",
          "lines": "#dce3eb",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#ff9d26",
          "secundary": "#00A8Be",
          "secundarySoft": "#D6EEF2",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "softGrey": "#788590",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                  "onProcessSheet": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        color="danger"
        size="big"
        type="outlined"
      >
        <WithStyles(Button)
          color="danger"
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                        "onProcessSheet": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [
                      [Function],
                    ],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          size="big"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "dangerLight": "#FF544F",
                "disabledGrey": "#ced4d9",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGrey": "#f0f3f5",
                "lines": "#dce3eb",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#ff9d26",
                "secundary": "#00A8Be",
                "secundarySoft": "#D6EEF2",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "softGrey": "#788590",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          type="outlined"
        >
          <Button
            classes={
              Object {
                "big": "HoiPoi-HoiPoi-Button-big-0-2-24",
                "danger": "HoiPoi-HoiPoi-Button-danger-0-2-22",
                "disabled": "HoiPoi-HoiPoi-Button-disabled-0-2-25",
                "fullWidth": "HoiPoi-HoiPoi-Button-fullWidth-0-2-26",
                "label": "HoiPoi-HoiPoi-Button-label-0-2-15",
                "labelLoading": "HoiPoi-HoiPoi-Button-labelLoading-0-2-16",
                "loader": "HoiPoi-HoiPoi-Button-loader-0-2-17",
                "outlined": "HoiPoi-HoiPoi-Button-outlined-0-2-18",
                "primary": "HoiPoi-HoiPoi-Button-primary-0-2-21",
                "root": "HoiPoi-HoiPoi-Button-root-0-2-14",
                "small": "HoiPoi-HoiPoi-Button-small-0-2-23",
                "squared": "HoiPoi-HoiPoi-Button-squared-0-2-19",
                "white": "HoiPoi-HoiPoi-Button-white-0-2-20",
              }
            }
            color="danger"
            size="big"
            type="outlined"
          >
            <button
              className="HoiPoi-HoiPoi-Button-root-0-2-14 HoiPoi-HoiPoi-Button-outlined-0-2-18 HoiPoi-HoiPoi-Button-danger-0-2-22 HoiPoi-HoiPoi-Button-big-0-2-24"
            >
              <span
                className=""
              >
                <span
                  className="HoiPoi-HoiPoi-Button-label-0-2-15"
                >
                  ACTION
                </span>
              </span>
            </button>
          </Button>
        </WithStyles(Button)>
      </JssContextSubscriber>
      <JssContextSubscriber
        size="big"
        type="squared"
      >
        <WithStyles(Button)
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                        "onProcessSheet": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [
                      [Function],
                    ],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          size="big"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "dangerLight": "#FF544F",
                "disabledGrey": "#ced4d9",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGrey": "#f0f3f5",
                "lines": "#dce3eb",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#ff9d26",
                "secundary": "#00A8Be",
                "secundarySoft": "#D6EEF2",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "softGrey": "#788590",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          type="squared"
        >
          <Button
            classes={
              Object {
                "big": "HoiPoi-HoiPoi-Button-big-0-2-24",
                "danger": "HoiPoi-HoiPoi-Button-danger-0-2-22",
                "disabled": "HoiPoi-HoiPoi-Button-disabled-0-2-25",
                "fullWidth": "HoiPoi-HoiPoi-Button-fullWidth-0-2-26",
                "label": "HoiPoi-HoiPoi-Button-label-0-2-15",
                "labelLoading": "HoiPoi-HoiPoi-Button-labelLoading-0-2-16",
                "loader": "HoiPoi-HoiPoi-Button-loader-0-2-17",
                "outlined": "HoiPoi-HoiPoi-Button-outlined-0-2-18",
                "primary": "HoiPoi-HoiPoi-Button-primary-0-2-21",
                "root": "HoiPoi-HoiPoi-Button-root-0-2-14",
                "small": "HoiPoi-HoiPoi-Button-small-0-2-23",
                "squared": "HoiPoi-HoiPoi-Button-squared-0-2-19",
                "white": "HoiPoi-HoiPoi-Button-white-0-2-20",
              }
            }
            size="big"
            type="squared"
          >
            <button
              className="HoiPoi-HoiPoi-Button-root-0-2-14 HoiPoi-HoiPoi-Button-squared-0-2-19 HoiPoi-HoiPoi-Button-white-0-2-20 HoiPoi-HoiPoi-Button-big-0-2-24"
            >
              <span
                className=""
              >
                <span
                  className="HoiPoi-HoiPoi-Button-label-0-2-15"
                >
                  ACTION
                </span>
              </span>
            </button>
          </Button>
        </WithStyles(Button)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Button is rendered without crashes 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "dangerLight": "#FF544F",
          "disabledGrey": "#ced4d9",
          "grey": "#697782",
          "lightBlack": "#5f656b",
          "lightGrey": "#f0f3f5",
          "lines": "#dce3eb",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#ff9d26",
          "secundary": "#00A8Be",
          "secundarySoft": "#D6EEF2",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "softGrey": "#788590",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "primary": "white",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                  "onProcessSheet": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [
                [Function],
              ],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber>
        <WithStyles(Button)
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                        "onProcessSheet": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [
                      [Function],
                    ],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          size="medium"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "dangerLight": "#FF544F",
                "disabledGrey": "#ced4d9",
                "grey": "#697782",
                "lightBlack": "#5f656b",
                "lightGrey": "#f0f3f5",
                "lines": "#dce3eb",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#ff9d26",
                "secundary": "#00A8Be",
                "secundarySoft": "#D6EEF2",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "softGrey": "#788590",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "primary": "white",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          type="filled"
        >
          <Button
            classes={
              Object {
                "big": "HoiPoi-Button-big-0-2-11",
                "danger": "HoiPoi-Button-danger-0-2-9",
                "disabled": "HoiPoi-Button-disabled-0-2-12",
                "fullWidth": "HoiPoi-Button-fullWidth-0-2-13",
                "label": "HoiPoi-Button-label-0-2-2",
                "labelLoading": "HoiPoi-Button-labelLoading-0-2-3",
                "loader": "HoiPoi-Button-loader-0-2-4",
                "outlined": "HoiPoi-Button-outlined-0-2-5",
                "primary": "HoiPoi-Button-primary-0-2-8",
                "root": "HoiPoi-Button-root-0-2-1",
                "small": "HoiPoi-Button-small-0-2-10",
                "squared": "HoiPoi-Button-squared-0-2-6",
                "white": "HoiPoi-Button-white-0-2-7",
              }
            }
            size="medium"
            type="filled"
          >
            <button
              className="HoiPoi-Button-root-0-2-1 undefined HoiPoi-Button-white-0-2-7"
            >
              <span
                className=""
              >
                <span
                  className="HoiPoi-Button-label-0-2-2"
                >
                  Hello
                </span>
              </span>
            </button>
          </Button>
        </WithStyles(Button)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
